2023-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module_aliases.h: Add missing module aliases "PNG00",
	"PNG48", "PNG64".

2023-08-31  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c BMP with 2bpp is a legal BMP variant.
	https://en.wikipedia.org/wiki/BMP_file_format
	Quote: "The 2-bit per pixel (2bpp) format supports 4 distinct colors and stores
	4 pixels per 1 byte, the left-most pixel being in the two most significant bits
	(Windows CE only)."

	Partial revert: BITMAPV2INFOHEADER: RGB bit field masks,
	                BITMAPV3INFOHEADER+: RGBA
	The opacity channel handling is even more complex.

2023-08-29  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c First attempt to read BMP with BI_JPEG compression
	inside.

2023-08-28  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c Remove code duplicity and evaluate BiCompression
        only on one place.

2023-08-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GetImageInfoAttribute): For the "name" key,
	return the input file base name, until reason is found to do
	otherwise.

	* magick/utility.c (TranslateTextEx): Restore previous
	functionality in which a NULL pointer is returned instead of an
	empty string. Some algorithms are depending on this!  Addresses
	SourceForge issue #722 v1.3.41 "PerlMagick montage.t fails
	completely".

2023-08-23  Fojtik Jaroslav  <JaFojtik@yandex.com>
	
	* VisualMagick\installer\inc\files-dlls.isx
	* VisualMagick\installer\inc\body.isx
	
	Prepare installation script for MSVC2013 runtime.

2023-08-22  Fojtik Jaroslav  <JaFojtik@yandex.com>
	
	* VisualMagick\installer\inc\files-dlls.isx
	* VisualMagick\installer\inc\body.isx
	
	Prepare installation script for MSVC2010 runtime.

2023-08-21  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c When alpha is to be used, writer must not use
	BI_BITFIELDS compression that instructs to strip alpha.

2023-08-20  Fojtik Jaroslav  <JaFojtik@yandex.com>
