@@ -1,3 +1,7 @@
+2023-09-01  Fojtik Jaroslav  <JaFojtik@yandex.com>
+
+	* coders/bmp.c Bitmap header with size 52 bytes is also valid.
+
 2023-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/module_aliases.h: Add missing module aliases "PNG00",
